--- a/CarbonFootprint.html
+++ b/CarbonFootprint.html
@@ -32,11 +32,7 @@
             background-color: #f8f9fa; /* Light background color for content */
         }
 
-        /* Adjust button size */
-        #feedback-submit-btn {
-            padding: 5px 15px;
-            font-size: 14px;
-        }
+
 
         /* Adjust spacing between sections */
         .section-margin {
@@ -208,18 +204,11 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-5 energy-category">
+        <div class="col-md-10">
             <h4>Electricity</h4>
             <div class="slider-container">
-                <input type="range" min="0" max="1000" value="50" class="slider" id="electricitySlider">
+                <input type="range" min="0" max="1000" value="50" class="slider" id="electricitySlider" style="width: 100%;">
                 <p>Value: <span id="electricityValue">50</span> kWh</p>
-            </div>
-        </div>
-        <div class="col-md-5 energy-category">
-            <h4>Other Energy</h4>
-            <div class="slider-container">
-                <input type="range" min="0" max="1000" value="50" class="slider" id="otherEnergySlider">
-                <p>Value: <span id="otherEnergyValue">50</span> kWh</p>
             </div>
         </div>
     </div>
@@ -271,22 +260,16 @@
         document.getElementById('electricityValue').textContent = this.value;
     });
 
-    document.getElementById('otherEnergySlider').addEventListener('input', function() {
-        document.getElementById('otherEnergyValue').textContent = this.value;
-    });
-
     // Handle confirm button click
     document.getElementById('confirmButton').addEventListener('click', function() {
         var publicTransportValue = document.getElementById('publicTransportSlider').value;
         var privateTransportValue = document.getElementById('privateTransportSlider').value;
         var electricityValue = document.getElementById('electricitySlider').value;
-        var otherEnergyValue = document.getElementById('otherEnergySlider').value;
 
         // Do something with the values (e.g., send to server)
         console.log('Public Transport Value:', publicTransportValue);
         console.log('Private Transport Value:', privateTransportValue);
         console.log('Electricity Value:', electricityValue);
-        console.log('Other Energy Value:', otherEnergyValue);
 
         // Add further processing or actions here
         alert('Values confirmed!');
